<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_4sdp"
    tools:context=".waitingTime">

    <TextView
        android:id="@+id/wt_tv_ti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_25sdp"
        android:gravity="center"
        android:text=""
        android:textSize="@dimen/_20ssp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:entries="@array/select" />

    <LinearLayout
        android:id="@+id/wt_ll_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/wt_tv_time"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_4sdp"
            android:padding="@dimen/_8sdp"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wt_et_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:hint="@string/time">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:textColorHint="#616161" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wt_ll_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/wt_tv_number"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_4sdp"
            android:padding="@dimen/_8sdp"
            android:text="@string/number"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wt_et_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:hint="@string/number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:textColorHint="#616161" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/wt_btn_calc"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_margin="@dimen/_32sdp"
        android:background="@drawable/button_background"
        android:text="@string/calculate"
        android:textAllCaps="false"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        android:visibility="gone" />

        <TextView
            android:id="@+id/nt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textSize="@dimen/_20ssp"/>

</LinearLayout>